Fixed orientation and spacing of header and first section

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
     display: flex;
     flex-direction: column;
-    margin: 0;
+    margin: auto;
 }
 
 .header{
@@ -11,6 +11,7 @@ body{
     align-items: center;
     justify-content: space-between;
     background-color: #1F2937;
+    flex-shrink: 0;
 }
 
 ul{
@@ -44,13 +45,15 @@ a{
     display: flex;
     justify-content: space-between;
     background-color: #1F2937;
+    height: 500px;
+    align-items: center;
 }
 
 .left-sect1{
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    flex-basis: 600px;
+    flex-basis: 450px;
 }
 
 .secondary-hero{
@@ -77,6 +80,7 @@ a{
     display: flex;
     align-items: center;
     padding: 0px 175px;
+    height: 275px;
 }
 
 .header, .section-1{
